<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 앱 이름 -->
    <string name="app_name">F25 Frontend</string>

    <string name="url">http://f25-backend.onrender.com/</string>
    <!-- 탑바 -->
    <string name="back">뒤로가기</string>
    <string name="notification_desc">알림</string>

    <!-- 달력 -->
    <string name="default_month">2025년 7월</string>
    <string name="calendar_desc">달력</string>
    <string name="month_year_placeholder">2025년 8월</string>
    <string name="month_year_format">%1$d월 %2$d년</string>
    <string name="prev_week">이전 주</string>
    <string name="next_week">다음 주</string>

    <!-- 탭바 -->
    <string name="home">홈</string>
    <string name="world">탐색</string>
    <string name="profile">프로필</string>

    <!-- 일정 -->
    <string name="category_sample">카테고리</string>
    <string name="add_schedule_desc">일정 추가</string>
    <string name="task_placeholder">할 일</string>
    <string name="btn_more">더보기</string>
    <string name="notification">알림</string>
    <string name="schedule_category">일정 카테고리</string>
    <string name="my_category">나의 카테고리</string>
    <string name="add_category">카테고리 추가</string>
    <string name="edit_category">카테고리 수정</string>

    <!-- 접근성 -->
    <string name="desc_lock_icon">잠금 아이콘</string>
    <string name="desc_add_task">일정 추가</string>
    <string name="category_icon_desc">카테고리 아이콘</string>

    <!-- 버튼 -->
    <string name="category_name_sample">카테고리 1</string>
    <string name="edit">변경</string>
    <string name="delete">삭제</string>

    <string name="lock_icon">잠금 아이콘</string>
    <string name="category_name_placeholder">카테고리 이름</string>
    <string name="plus_sign">＋</string>
    <string name="percent_zero">0%</string>
    <string name="back_icon">뒤로가기 버튼</string>
    <string name="back_button_desc">뒤로 가기</string>



    <!-- 로그인 -->

    <!-- 마이페이지 텍스트 -->
    <string name="user_name">사용자이름</string>
    <string name="user_id">\@사용자아이디</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="edit_profile">회원 정보 수정</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>

    <!-- 접근성 및 버튼 설명 -->
    <string name="back_button">뒤로가기</string>
    <string name="notification_button">알림</string>
    <string name="arrow_icon">화살표 아이콘</string>
    <string name="profile_image">프로필 이미지</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt;5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
</resources>
